# Trash-Manager

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  process_kill.rs  process_list.rs  types.rs
frontend-egui/: Cargo.toml
frontend-egui/src/: main.rs
frontend-egui/src/ui/: header.rs  mod.rs  process_table.rs  status_bar.rs
